[gd_scene load_steps=38 format=2]

[ext_resource path="res://Cenas/Menu_jogar.gd" type="Script" id=1]
[ext_resource path="res://Cenas/menu_instruçoes.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Modelo_fonte_menuPrincipal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Cenas/menu_ajustes.gd" type="Script" id=4]
[ext_resource path="res://Fonts/AntroposFreefont-BW2G.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/Sprites_menu/Backgrounds/Menu jogar.png" type="Texture" id=6]
[ext_resource path="res://Cenas/menu_Créditos.gd" type="Script" id=7]
[ext_resource path="res://Cenas/menu_sair.gd" type="Script" id=8]
[ext_resource path="res://Cenas/modal_ajustes.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Sprites_menu/modais/Instrucoes.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Sprites_menu/botoes/bt_instrucoes.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Sprites_menu/botoes/bt_creditos.png" type="Texture" id=12]
[ext_resource path="res://Cenas/modal_sair.gd" type="Script" id=13]
[ext_resource path="res://Sprites/Sprites_menu/modais/sair.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_creditos_proximo_.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_som_on.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Sprite_modal/fundo_modal_escurecido.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_sair_sim_hover.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_voltar_hover.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_sair_nao_hover.png" type="Texture" id=20]
[ext_resource path="res://Cenas/modal_instrucoes.gd" type="Script" id=21]
[ext_resource path="res://Sprites/Sprites_menu/modais/modal_ajustes.png" type="Texture" id=22]
[ext_resource path="res://Cenas/MainScene.gd" type="Script" id=23]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_efeitos_on.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_aplicar_.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_aplicar_hover.png" type="Texture" id=26]
[ext_resource path="res://sons/som_ambiente.wav" type="AudioStream" id=27]
[ext_resource path="res://icon.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_sair_nao_.png" type="Texture" id=29]
[ext_resource path="res://Cenas/modal_creditos.gd" type="Script" id=30]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_sair_sim_.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_ajustes_voltar_.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_creditos_anterior_hover.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_creditos_proximo_hover.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Botoes/bt_menu/botao_creditos_anterior_.png" type="Texture" id=35]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[node name="Menu" type="Node"]
script = ExtResource( 23 )
__meta__ = {
"_edit_vertical_guides_": [ 497.28, 579.688, 429.689, 661.515, 328.967, 281.421, 764.988, 811.166, 515.908 ]
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -20.0
autoplay = true

[node name="Sprite_principal" type="Sprite" parent="."]
position = Vector2( 540, 360 )
texture = ExtResource( 6 )

[node name="Jogar" type="Button" parent="."]
margin_left = 119.0
margin_top = 315.0
margin_right = 270.0
margin_bottom = 352.0
focus_mode = 0
size_flags_horizontal = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_jogar" type="Label" parent="Jogar"]
margin_right = 151.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.831373, 0.666667, 0.00392157, 1 )
text = "Jogar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intruções" type="Button" parent="."]
margin_left = 79.0
margin_top = 359.0
margin_right = 311.0
margin_bottom = 396.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_intruções" type="Label" parent="intruções"]
margin_right = 233.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.8, 0.517647, 0.466667, 1 )
text = "Instruções"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ajustes" type="Button" parent="."]
margin_left = 105.0
margin_top = 403.0
margin_right = 284.0
margin_bottom = 440.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_ajustes" type="Label" parent="ajustes"]
margin_right = 180.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.211765, 0.392157, 0.584314, 1 )
text = "Ajustes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Créditos" type="Button" parent="."]
margin_left = 98.0
margin_top = 447.0
margin_right = 291.0
margin_bottom = 486.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_creditos" type="Label" parent="Créditos"]
margin_right = 192.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.858824, 0.482353, 0.117647, 1 )
text = "Créditos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sair" type="Button" parent="."]
margin_left = 132.0
margin_top = 491.0
margin_right = 258.0
margin_bottom = 528.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_sair" type="Label" parent="sair"]
margin_right = 126.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.698039, 0.25098, 0.156863, 1 )
text = "Sair"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 305, 765.459 )
scale = Vector2( 0.735514, 1 )
texture = ExtResource( 28 )

[node name="modal_instrucoes" type="Node2D" parent="."]
visible = false
position = Vector2( 79, 359 )
z_index = 3
script = ExtResource( 21 )

[node name="Button" type="Button" parent="modal_instrucoes"]
margin_left = -83.0
margin_top = -365.0
margin_right = 1018.0
margin_bottom = 361.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="modal_instrucoes"]
position = Vector2( 469.04, 2.77972 )
scale = Vector2( 1.00933, 1.0105 )
texture = ExtResource( 17 )

[node name="Sprite2" type="Sprite" parent="modal_instrucoes"]
position = Vector2( 462.602, -16.4403 )
texture = ExtResource( 10 )

[node name="TextureButton" type="TextureButton" parent="modal_instrucoes"]
margin_left = 421.59
margin_top = 194.14
margin_right = 491.59
margin_bottom = 264.14
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modal_creditos" type="Node2D" parent="."]
visible = false
position = Vector2( 98, 447 )
z_index = 3
script = ExtResource( 30 )

[node name="Button" type="Button" parent="modal_creditos"]
margin_left = -97.0
margin_top = -451.0
margin_right = 998.0
margin_bottom = 278.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="modal_creditos"]
position = Vector2( 444.763, -90.3797 )
texture = ExtResource( 17 )

[node name="Sprite2" type="Sprite" parent="modal_creditos"]
position = Vector2( 419.192, -92.4997 )

[node name="TextureButton" type="TextureButton" parent="modal_creditos"]
margin_left = 381.909
margin_top = 184.416
margin_right = 451.909
margin_bottom = 254.416
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anterior" type="TextureButton" parent="modal_creditos"]
margin_left = 214.0
margin_top = 96.0
margin_right = 382.0
margin_bottom = 149.0
texture_normal = ExtResource( 35 )
texture_hover = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="proximo" type="TextureButton" parent="modal_creditos"]
margin_left = 481.877
margin_top = 96.0
margin_right = 649.877
margin_bottom = 149.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="proximo2" type="TextureButton" parent="modal_creditos"]
visible = false
margin_left = 329.81
margin_top = 97.0
margin_right = 507.81
margin_bottom = 159.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anterior2" type="TextureButton" parent="modal_creditos"]
visible = false
margin_left = 329.81
margin_top = 97.0
margin_right = 507.81
margin_bottom = 159.0
texture_normal = ExtResource( 35 )
texture_hover = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modal_ajustes" type="Node2D" parent="."]
visible = false
position = Vector2( 105, 403 )
z_index = 3
script = ExtResource( 9 )

[node name="controle" type="Button" parent="modal_ajustes"]
margin_left = -100.0
margin_top = -402.0
margin_right = 981.0
margin_bottom = 317.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="modal_ajustes"]
position = Vector2( 440, -43 )
texture = ExtResource( 17 )

[node name="Sprite2" type="Sprite" parent="modal_ajustes"]
position = Vector2( 440, -52 )
texture = ExtResource( 22 )

[node name="voltar" type="TextureButton" parent="modal_ajustes"]
margin_left = 221.0
margin_top = 120.0
margin_right = 397.0
margin_bottom = 181.0
texture_normal = ExtResource( 32 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aplicar" type="TextureButton" parent="modal_ajustes"]
margin_left = 488.0
margin_top = 120.0
margin_right = 664.0
margin_bottom = 181.0
texture_normal = ExtResource( 25 )
texture_hover = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musica" type="TextureButton" parent="modal_ajustes"]
margin_left = 383.252
margin_top = -181.019
margin_right = 482.252
margin_bottom = -82.0194
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="efeitos" type="TextureButton" parent="modal_ajustes"]
margin_left = 383.252
margin_top = -23.0193
margin_right = 482.252
margin_bottom = 75.9807
texture_normal = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modal_sair" type="Node2D" parent="."]
visible = false
position = Vector2( 132, 491 )
script = ExtResource( 13 )

[node name="Button" type="Button" parent="modal_sair"]
margin_left = -132.0
margin_top = -492.0
margin_right = 957.0
margin_bottom = 229.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="modal_sair"]
position = Vector2( 411.466, -133.191 )
texture = ExtResource( 17 )

[node name="Sprite2" type="Sprite" parent="modal_sair"]
position = Vector2( 415.311, -110.001 )
texture = ExtResource( 14 )

[node name="nao" type="TextureButton" parent="modal_sair"]
margin_left = 204.0
margin_top = -40.0
margin_right = 382.0
margin_bottom = 22.0
texture_normal = ExtResource( 29 )
texture_hover = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sim" type="TextureButton" parent="modal_sair"]
margin_left = 450.0
margin_top = -40.0
margin_right = 628.0
margin_bottom = 22.0
texture_normal = ExtResource( 31 )
texture_hover = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Jogar" to="Jogar" method="jogar_pressionado"]
[connection signal="button_up" from="intruções" to="intruções" method="instrucoes_pressionado"]
[connection signal="modal_instrucoes" from="intruções" to="modal_instrucoes" method="_on_intrues_modal_instrucoes"]
[connection signal="abre_ajustes" from="ajustes" to="modal_ajustes" method="_on_ajustes_abre_ajustes"]
[connection signal="button_up" from="ajustes" to="ajustes" method="ajustes_pressionado"]
[connection signal="button_up" from="Créditos" to="Créditos" method="creditos_pressionado"]
[connection signal="modal_creditos" from="Créditos" to="modal_creditos" method="_on_Crditos_modal_creditos"]
[connection signal="button_up" from="sair" to="sair" method="sair_pressionado"]
[connection signal="modal_sair" from="sair" to="modal_sair" method="_on_sair_modal_sair"]
[connection signal="button_up" from="modal_instrucoes/TextureButton" to="modal_instrucoes" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="modal_creditos/TextureButton" to="modal_creditos" method="_on_TextureButton_button_up"]
[connection signal="button_up" from="modal_creditos/anterior" to="modal_creditos" method="_on_anterior_button_up"]
[connection signal="button_up" from="modal_creditos/proximo" to="modal_creditos" method="_on_proximo_button_up"]
[connection signal="button_up" from="modal_creditos/proximo2" to="modal_creditos" method="_on_proximo2_button_up"]
[connection signal="button_up" from="modal_creditos/anterior2" to="modal_creditos" method="_on_anterior2_button_up"]
[connection signal="button_up" from="modal_ajustes/voltar" to="modal_ajustes" method="_on_voltar_button_up"]
[connection signal="button_up" from="modal_ajustes/aplicar" to="modal_ajustes" method="_on_aplicar_button_up"]
[connection signal="button_up" from="modal_ajustes/musica" to="modal_ajustes" method="_on_musica_button_up"]
[connection signal="button_up" from="modal_ajustes/efeitos" to="modal_ajustes" method="_on_efeitos_button_up"]
[connection signal="button_up" from="modal_sair/nao" to="modal_sair" method="_on_nao_button_up"]
[connection signal="button_up" from="modal_sair/sim" to="modal_sair" method="_on_sim_button_up"]
